--- a/sections/mvp-hero-banner.liquid
+++ b/sections/mvp-hero-banner.liquid
@@ -59,7 +59,17 @@
       "unit": "px",
       "label": "Desktop height",
       "default": 600
-    }
+    },
+    {
+      "type": "range",
+      "id": "mobile_hero_height",
+      "min": 300,
+      "max": 600,
+      "step": 50,
+      "unit": "px",
+      "label": "Mobile height",
+      "default": 500
+    }    
   ],
   "presets": [
     {
@@ -71,25 +81,28 @@
 
 <style>
 .hero-section {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: minmax(50vh, auto);
   position: relative;
   width: 100%;
   overflow: hidden;
 }
 
 .hero-image {
+  grid-row: 1 / -1;
+  grid-column: 1 / -1;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
 .hero-content {
-  position: absolute;
-  top: 18rem;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 90%;
-  max-width: 800px;
-  padding: 10px;
+  display: grid;
+  grid-row: 1 / -1;
+  grid-column: 1 / -1;
+  place-items: center;
+  padding: 1rem;
   text-align: {{ section.settings.text_alignment | replace: 'text-', '' }};
   color: #ffffff;
   text-shadow: 0.75rem 0.75rem 5px rgba(0, 0, 0, 0.3);
@@ -134,11 +147,32 @@
   border-color: rgba(93, 238, 93, 0.83); 
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .hero-section {
-    height: 50vh !important;
+    grid-template-rows: minmax(30vh, auto);
   }
-  
+
+  .hero-button {
+  padding: 0.1rem 0.25rem;
+  font-size: 12px;
+  }
+
+  .hero-button-container {
+  bottom: 0.5rem;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1200px) {
+  .hero-section {
+    grid-template-rows: minmax(45vh, auto);
+  }
+    
+  .hero-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   .hero-heading {
     font-size: 2rem;
   }
@@ -153,18 +187,18 @@
 }
 </style>
 
-<div class="hero-section" style="height: {{ section.settings.hero_height }}px;">
+<div class="hero-section">
   {%- if section.settings.hero_image -%}
-    {{ section.settings.hero_image | image_url: width: 2000 | image_tag:
+    {{ section.settings.hero_image | image_url: width: 2000| image_tag:
       loading: 'eager',
       class: 'hero-image',
       alt: section.settings.heading,
-      width: 2000,
+      width: 1500,
       height: section.settings.hero_height
     }}
   {%- endif -%}
   
-  {% comment %} <div class="hero-content">
+  <div class="hero-content">
     {%- if section.settings.heading != blank -%}
       <h1 class="hero-heading">{{ section.settings.heading }}</h1>
     {%- endif -%}
@@ -173,7 +207,7 @@
       <p class="hero-subheading">{{ section.settings.subheading }}</p>
     {%- endif -%}
     
-  </div> {% endcomment %}
+  </div>
   
   {%- if section.settings.button_link != blank and section.settings.button_text != blank -%}
     <div class="hero-button-container">
